# docker_tests

./: README.md
Vagrant/: kak-ustanovit-laravel-homstead-na-windows.url  Основы Vagrant,YouTube.url
centos_cmake_c++/docker_build_scripts/: 1create_container.bat  2dnf_update.bat  3cmake.bat  build  config.bat  dnf_update  docker_build_scripts.txt
centos_cmake_c++/project/: CMakeLists.txt  Main.cpp
dockerTutorial/: 1.txt  2.txt  3.txt  4.txt  5.txt
docker_CppBuild/: 1make_docker_image.bat  2run_docker_image.bat  Dockerfile  clean.bat  Использование Docker для сборки и запуска проекта на C++.РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ Docker РґР»СЏ СЃР±РѕСЂРєРё Рё Р·Р°РїСѓСЃРєР° РїСЂРѕРµРєС‚Р° РЅР° C++ - РҐР°Р±СЂ.url
docker_CppBuild/src/: CMakeLists.txt  build.bat  main.cpp  sample_hello_world.h  test.cpp
docker_CppConanBuild/: How to use Docker to create C and C++ Conan packages вЂ” conan 1.49.0 documentation.url
eplore/: w10
linux/apache2/: 2run.bat  3web.bat  Dockerfile  apache - How to start apache2 automatically in a ubuntu docker container- - Stack Overflow.url  Не-запускается-docker-container-с-ubuntu.url
linux/centos/: 1install.bat  2bash.bat  u
linux/ubuntu/: 1inst.bat  2bash.bat  info.txt
urls/: C++ development environment with Docker and GitLab - by Ivan Safonov - FAUN Publication.url  Dockerized build environments for C-C++ projects - Dmitry Danilov.url  John Freeman - What I learned making a Docker container for building C++ on Windows.url  docker-tutorial-dlia-novichkov-rassmatrivaiem-docker-tak-iesli-by-on-byl-ighrovoi-pristavkoi.url
(+9 files in other folders)
